# halide-haskell-examples

./: cabal.project  flake.nix
from_danis_badrtdinov/: Curie_temperature_mod.py  example-by-danis-badrtdinov.cabal
from_danis_badrtdinov/app/: Main.hs
from_hugo_strand/: README.md  compare.py  data_in.h5  example-by-hugo-strand.cabal  recursion.py
from_hugo_strand/app/: Main.hs
